Add Material Design option to ctor of views::Checkbox.

Material Design checkbox is available behind runtime flag
(--secondary-ui-md), but there was no way to access the feature
separately without enabling all Material Design secondary UI elements.

We need Material Design checkbox in Chrome OS notification settings.
Mock: https://crbug.com/726246#c8

TEST=manual
BUG=767803

Change-Id: I89dfbd3708cae64bd68183167a2088b5ca826856